14-Sep-2003 by Matze Braun
-applied sound patch by Ivo Danihelka (thanks alot)
-added code to construct SDL_RWops in physfs files

12-Sep-2003 by Matze Braun
-use the physfs for the colortable cache now
-removed lots of unused code from Surface class
-removed the screenshot function (this allowed to remove the BMP saver too).
 because there are external screenshot tools around.

11-Sep-2003 by Matze Braun
-removed more win32 specific code
-removed #ifdef USE_SDLs, the code is enabled by default now
-added a new commandline parser
-smaller fixes/cleanups

10-Sep-2003 by Matze Braun
-more random cleanups
-more cleanups so that the Stub directory is empty now
-fixed the bug where the TileEngine didn't correctly draw the last line
-removed the strange PObject class (still some utility classes which formerly
 dealt with PObject are there and are - as before - quiet useless). The long
  story:
  It seemed like PObject was planed as some generic base type which provided a
  uniform interface to functions like comparing 2 objects. But since the only
  function is_equal in PObject wasn't virtual, and since it was never used I
  decided that this stuff is quiet useless.
-removed most of the win32 specific code

9-Sep-2003 by Matze Braun
-worked around issues with the block allocator code for Particl2D (new operator
 is overloaded, but laste C++ draft doesn't allow to return 0 from such an
 overloaded new.) I added exceptions and lots of try {} catch{} blocks, let's
 hope I didn't miss something.
-eleminated isValidPtr, Util.hpp and GOTTA_HAVE_IT from codewiz.hpp

8-Sep-2003 by Matze Braun
-added some basic music plying support (all files in sfx/music are played in
		random order, so simply put some .mp3 or .ogg there)
-enabled Tile engine code again
-fixed some bugs in the blitting routines
-fixed some more small bugs I introduced while porting
-Added new keyboard handling code
-fixed lots of code that assumed a key scancode is "only" a char